# OIDC-Proxy

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_piadhevents.yml
src/piadhevents/: __init__.py
