[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piadhevents"]

[project]
name = "piadhevents"
version = "0.0.1"
authors = [
    { name="Michael Bigras", email="michael.bigras@agnicoeagle.com" },
]
description = "Authentication proxy for PI notifications to AVEVA Data Hub"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
]